CodeJuzi, feat: optimize java docker code sandbox